--- a/teleapp/templates/add_customer.html
+++ b/teleapp/templates/add_customer.html
@@ -129,13 +129,13 @@
 					<span>กลุ่มนำเล่น</span><hr>
 					<div class="form-check">
 						<label class="form-check-label">
-							<input type="radio" class="form-check-input" name="exp" value="yes" >สนใจ
+							<input type="radio" class="form-check-input" name="interest" value="yes" >สนใจ
 						</label>
 					</div>
 
 					<div class="form-check">
 						<label class="form-check-label">
-							<input type="radio" class="form-check-input" name="exp" value="no" >ไม่สนใจ
+							<input type="radio" class="form-check-input" name="interest" value="no" >ไม่สนใจ
 						</label>
 					</div>
 
@@ -146,7 +146,7 @@
 
 					<div class="form-check">
 						<label class="form-check-label">
-							<input type="radio" class="form-check-input" name="sms" value="no">สนใจ
+							<input type="radio" class="form-check-input" name="sms" value="yes">สนใจ
 						</label>
 					</div>
 
@@ -159,7 +159,7 @@
 					<span>รับโบนัส</span><hr>
 					<div class="form-check">
 						<label class="form-check-label">
-							<input type="radio" class="form-check-input" name="sms" value="no">สนใจ
+							<input type="radio" class="form-check-input" name="sms" value="yes">สนใจ
 						</label>
 					</div>
 
@@ -179,17 +179,17 @@
 				
 				<div class="input-group mb-3 input-group-sm">
 					<div class="input-group-prepend"><span class="input-group-text">เบอร์โทรลูกค้า</span></div>
-					<input type="text" class="form-control">
+					<input type="number" min="0" class="form-control">
 				</div>						
 				
 
 				<div class="input-group mb-3 input-group-sm">
-					<div class="input-group-prepend"><span class="input-group-text">เวลาโทรกลับ</span></div>
+					<div class="input-group-prepend"><span class="input-group-text">เวลาโทรกลับ&nbsp;&nbsp;</span></div>
 					<input type="text" class="form-control">
 				</div>
 
 				<div class="input-group mb-3 input-group-sm">
-					<div class="input-group-prepend"><span class="input-group-text">Line ID</span></div>
+					<div class="input-group-prepend"><span class="input-group-text">Line ID&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</span></div>
 					<input type="text" class="form-control">
 				</div>
 							
@@ -215,8 +215,8 @@
 <br>
 		<div class="card-body-sm col-sm-6">
 			<span style="color: red;">!! ข้อควรระวัง !! </span>
-			<li>ความสนใจของลูกค้าเลือกได้มากกว่า 1 ความสนใจ</li>
-			<li>เวลาโทรกลับ และ Line ID หากมีควรกรอกเพื่อเป็นข้อมูลติดต่อกลับ</li>
+			<small><li>ความสนใจของลูกค้าเลือกได้มากกว่า 1 ความสนใจ</li></small>
+			<small><li>เวลาโทรกลับ และ Line ID หากมีควรกรอกเพื่อเป็นข้อมูลติดต่อกลับ</li></small>
 		</div>
 <br>
 
