--- a/teleapp/templates/register_form.html
+++ b/teleapp/templates/register_form.html
@@ -1,70 +1,68 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  {% block title %}
+	{% block title %}
 
-  <title>Register</title>
+	<title>Register</title>
 
-  {% endblock title %}
-  <meta charset="utf-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/css/bootstrap.min.css">
-  <script src="https://cdn.jsdelivr.net/npm/jquery@3.6.3/dist/jquery.slim.min.js"></script>
-  <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js"></script>
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/js/bootstrap.bundle.min.js"></script>
+	{% endblock title %}
+	<meta charset="utf-8">
+	<meta name="viewport" content="width=device-width, initial-scale=1">
+	<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/css/bootstrap.min.css">
+	<script src="https://cdn.jsdelivr.net/npm/jquery@3.6.3/dist/jquery.slim.min.js"></script>
+	<script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js"></script>
+	<script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/js/bootstrap.bundle.min.js"></script>
 </head>
 <body>
+	
 
+	{% block c1 %}
+	<div class="container mt-5 ">			
+		<div class="row">
+			<div class="col-sm-4">
 
-{% block c0 %}
-<div class="jumbotron text-center">
-    <h1>C-HRM Register</h1>
-    <p>สมัครสมาชิกใช้งานระบบ โปรแกรมบริหารจัดการบุคคล</p>
-    <a href="/login">เข้าสู่ระบบ</a>
-  </div>
+			</div>				
+			
+			<div class="col-sm-4">
+					<div class="container">
+						<h3 class="text-center"> สมัครสมาชิก </h3><br>
+						<div class="card">
+							<div class="card-body">
 
-{% endblock c0 %}
+								<form method="POST">
+									{% csrf_token %}
 
+									<div class="form-group">
+										<label for="username"><small>ชื่อผู้ใช้ :</small></label>
+										<input type="email" class="form-control" id="username" name="username">
+									</div>
 
-{% block c1%}
-<div class="container">
-    <! ***** หากมีการอัพโหลดไฟล์ ตรงนี้ด้วยสำคัญ >
-    <form method="POST">
-  
-      <!*****จำเป็นต้องใส่หากต้องการป้อนข้อมูลจากหน้าเว็บเข้าเว็บ>
-      {% csrf_token %}
-  
-      <div class="form-group">
-        <label for="first_name">ชื่อผู้ใช้:</label>
-        <input type="text" class="form-control" id="first_name" name="first_name">
-      </div>
-  
-      <div class="form-group">
-        <label for="tel">เบอร์โทรศัพท์:</label>
-        <input type="text" class="form-control" id="tel" name="tel">
-      </div>
-  
+									<div class="form-group">
+										<small><label for="password">รหัสผ่าน :</label></small>
+											<input type="password" class="form-control" id="password" name="password">
+									</div>
 
-      <div class="form-group">
-        <label for="email">อีเมลล์ (ใช้สำหรับ Login ใช้งานระบบ):</label>
-        <input type="email" class="form-control" id="email" name="email">
-      </div>
-  
-      <div class="form-group">
-        <label for="password">รหัสผ่าน:</label>
-        <input type="password" class="form-control" id="password" name="password">
-      </div>
+									<div class="form-group">
+										<small><label for="password">ยืนยันรหัสผ่าน :</label></small>
+											<input type="password" class="form-control" id="password" name="password">
+									</div>
 
-      <div class="form-group">
-        <label for="password">ยืนยัน รหัสผ่านอีกครั้ง:</label>
-        <input type="password" class="form-control" id="password" name="password">
-      </div>
-  
-        <p>ระบบจะส่ง OTPผ่านทางโทรศัพท์ที่ได้ลงทะเบียนไว้ เพื่อยืนยันตัวตน</p>
-  
-      <button type="submit" class="btn btn-primary">ลงทะเบียน</button>
-      <button type="submit" class="btn btn-secondary">ยกเลิก</button>
-    </form>
-  </div><br>
+									<div class="form-group">
+										<small><label for="password">รหัสพนักงาน :</label></small>
+											<input type="password" class="form-control" id="password" name="password">
+									</div>
 
-  {% endblock c1%}
+								<button type="submit" class="btn btn-success btn-block">สมัครสมาชิก</button>
+
+							</form>
+
+							</div>
+						</div>
+					</div>
+				
+			</div>	
+	</div>
+
+</body> 
+
+{% endblock c1 %}
